--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start:dev": "node --watch server.js",
         "migrate": "npx sequelize-cli db:migrate",
         "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
-        "seed:reset": "npx sequelize-cli db:seed:undo:all && npx sequelize-cli db:seed:all"
+        "seed:reset": "npx sequelize-cli db:seed:undo:all && npx sequelize-cli db:seed:all",
+        "seed": "npx sequelize-cli db:seed:all"
     },
     "repository": {
         "type": "git",
